--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- Cache busting: 2025-08-06 -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -893,4 +895,5 @@
         document.head.appendChild(style);
     </script>
 </body>
+
 </html>
