--- a/about.html
+++ b/about.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us | Elite Install & Haul</title>
+    <meta name="description" content="Learn about our experience, values, and commitment to being the best installation partner.">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
+    <!-- THIS IS THE CRITICAL LINE THAT WAS MISSING -->
+    <link rel="stylesheet" href="style.css">
+
+</head>
+<body>
+    <a href="#main-content" class="skip-link">Skip to main content</a>
+    <header class="main-header">
+        <nav class="nav-container container">
+            <a href="index.html" class="logo">Elite Install</a>
+            <ul class="nav-links" id="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html" aria-current="page">About</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
+                <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+            </button>
+        </nav>
+    </header>
+
+    <main id="main-content">
+        <div class="page-header">
+            <div class="container">
+                <h1>An Extension of Your Team</h1>
+                <p>We're not just installers. We're an extension of your team, founded on industry experience and dedicated to upholding your standards.</p>
+            </div>
+        </div>
+
+        <section class="section">
+            <div class="container">
+                <div class="about-content">
+                    <div class="about-text">
+                        <h2>Founded on Experience</h2>
+                        <p>Our founder spent over two decades as a project manager for educational furniture dealerships. He faced the same challenges you deal with every day: unreliable subcontractors, communication breakdowns, and the constant worry about site professionalism.</p>
+                        <p>That experience taught us exactly what project managers need: a partner who understands the stakes, respects the process, and delivers consistent, drama-free results.</p>
+                    </div>
+                    <div class="about-values">
+                        <h3>Our Core Values</h3>
+                        <ul>
+                            <li><strong>Reliability:</strong> Consistent performance you can count on.</li>
+                            <li><strong>Professionalism:</strong> Uniformed, trained, background-checked team.</li>
+                            <li><strong>Efficiency:</strong> The right tools and experience, done right the first time.</li>
+                            <li><strong>Communication:</strong> Proactive updates and responsive service.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="main-footer">
+        <div class="container">
+             <p class="footer-copyright">&copy; 2025 Elite Install & Haul. All rights reserved.</p>
+        </div>
+    </footer>
+
+    <!-- THIS IS THE SECOND CRITICAL LINE -->
+    <script src="script.js" defer></script>
+</body>
+</html>
