--- a/services.html
+++ b/services.html
@@ -1,56 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- NOTE: The head, style, header, footer, and script are identical to index.html for consistency -->
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>About Us | Elite Install & Haul</title><meta name="description" content="Learn about our experience, values, and commitment to being the best installation partner."><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet"><style>/* [THE SAME CSS FROM INDEX.HTML GOES HERE] */</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Our Services | Elite Install & Haul</title>
+    <meta name="description" content="Turnkey installation solutions for all educational environments, from K-12 classrooms and libraries to science labs and administrative areas.">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+    <!-- Links to your master stylesheet -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
+
     <header class="main-header">
         <nav class="nav-container container">
             <a href="index.html" class="logo">Elite Install</a>
             <ul class="nav-links" id="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" aria-current="page">About</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html" aria-current="page">Services</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links"><svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg><svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg></button>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
+                <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+            </button>
         </nav>
     </header>
 
     <main id="main-content">
+        <!-- Page Header -->
         <div class="page-header">
             <div class="container">
-                <h1>An Extension of Your Team</h1>
-                <p>We're not just installers. We're an extension of your team, founded on industry experience and dedicated to upholding your standards.</p>
+                <h1>Our Installation Services</h1>
+                <p>We provide comprehensive, turnkey solutions for all educational and commercial environments, handling every detail so you can focus on your clients.</p>
             </div>
         </div>
 
+        <!-- Services Grid Section -->
         <section class="section">
             <div class="container">
-                <div class="about-content" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); gap: 3rem; align-items: center;">
-                    <div class="about-text">
-                        <h2 style="font-size: 1.8rem; color: var(--white); margin-bottom: 1rem;">Founded on Experience</h2>
-                        <p style="color: var(--text-secondary); margin-bottom: 1rem;">Our founder spent over two decades as a project manager for educational furniture dealerships. He faced the same challenges you deal with every day: unreliable subcontractors, communication breakdowns, and the constant worry about site professionalism.</p>
-                        <p style="color: var(--text-secondary);">That experience taught us exactly what project managers need: a partner who understands the stakes, respects the process, and delivers consistent, drama-free results.</p>
+                <div class="services-grid">
+                    <div class="service-card">
+                        <h3>K-12 Classroom Furniture</h3>
+                        <p>Desks, chairs, tables, teacher stations, and mobile storage. We handle everything from single classroom refreshes to entire new-build installations with precision and care.</p>
                     </div>
-                    <div class="about-values" style="background: var(--card-bg); border: 1px solid var(--border-color); border-radius: 12px; padding: 2rem;">
-                        <h3 style="font-size: 1.5rem; color: var(--white); margin-bottom: 1.5rem;">Our Core Values</h3>
-                        <ul style="list-style: none; color: var(--text-secondary);">
-                            <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">✓ <strong style="color: var(--text-primary); display: block;">Reliability:</strong> Consistent performance you can count on.</li>
-                            <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">✓ <strong style="color: var(--text-primary); display: block;">Professionalism:</strong> Uniformed, trained, background-checked team.</li>
-                            <li style="margin-bottom: 1rem; padding-left: 2rem; position: relative;">✓ <strong style="color: var(--text-primary); display: block;">Efficiency:</strong> The right tools and experience, done right the first time.</li>
-                            <li style="padding-left: 2rem; position: relative;">✓ <strong style="color: var(--text-primary); display: block;">Communication:</strong> Proactive updates and responsive service.</li>
-                        </ul>
+                    <div class="service-card">
+                        <h3>Library & Media Centers</h3>
+                        <p>Expert assembly and placement of shelving systems, circulation desks, study carrels, soft seating, and collaborative furniture to create inspiring learning hubs.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Science Labs & STEM</h3>
+                        <p>Precision installation for lab stations, chemical-resistant countertops, fume hoods, and specialized STEM equipment that demands accuracy and safety protocols.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Cafeterias & Common Areas</h3>
+                        <p>High-volume installation of cafeteria tables, benches, waste receptacles, stage equipment, and common area lounge furniture, completed efficiently and professionally.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Administrative & Office Areas</h3>
+                        <p>Assembly of office systems, reception desks, conference tables, and storage solutions that create professional environments reflecting your dealership's quality.</p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Full Project Support</h3>
+                        <p>Beyond installation, we offer project phasing coordination, receiving and warehousing, debris removal, site cleanup, and final warranty walkthrough support.</p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- Final Call to Action -->
+        <section class="cta-section">
+            <div class="container">
+                <h2>Ready to build with a reliable partner?</h2>
+                <p>Let's discuss how we can support your next project with the reliability your dealership deserves.</p>
+                <a href="contact.html" class="btn btn-primary">Get Your Free Quote</a>
+            </div>
+        </section>
+
     </main>
 
-    <footer><div class="container"><p>&copy; 2025 Elite Install & Haul. All rights reserved.</p></div></footer>
-    <script>/* [THE SAME SCRIPT FROM INDEX.HTML GOES HERE] */</script>
+    <footer class="main-footer">
+        <div class="container">
+            <div class="footer-content">
+                <p class="footer-logo">Elite Install</p>
+                <ul class="footer-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <p class="footer-copyright">&copy; 2025 Elite Install & Haul. All rights reserved.</p>
+            </div>
+        </div>
+    </footer>
+
+    <!-- Links to your master JavaScript file -->
+    <script src="script.js" defer></script>
 </body>
 </html>
