--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <title>Elite Install & Haul | Your Reputation, Installed.</title>
     <meta name="description" content="The elite B2B installation partner for furniture dealers. We guarantee on-time, on-budget, and flawless results that protect your reputation.">
     
-    <!-- Google Fonts: Inter -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-
-    <!-- This links to your external CSS file. All styling is controlled from here. -->
+    <!-- This links to your Helvetica font stack in the CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -37,10 +32,10 @@
     <main id="main-content">
 
         <!-- Section 1: Hero -->
-        <section class="hero">
+        <section class="hero home-hero">
             <div class="container">
                 <h1>Your Reputation, Installed.</h1>
-                <p class="subtitle">We are the elite B2B partner for furniture dealers who require flawless, on-time, and on-budget installations. Your success is our first priority.</p>
+                <p class="subtitle">We are the B2B installation partner that dealers trust. Flawless execution, proactive communication, and an unwavering commitment to protecting your reputation on every project.</p>
                 <div class="cta-buttons">
                     <a href="services.html" class="btn btn-gradient">Explore Our Services</a>
                     <a href="contact.html" class="btn btn-secondary">Request a Quote</a>
@@ -48,47 +43,42 @@
             </div>
         </section>
 
-        <!-- Section 2: Trust Bar (NEW) -->
+        <!-- Section 2: Trust Bar -->
         <div class="trust-bar">
             <div class="container">
-                <p>TRUSTED BY LEADING FURNITURE DEALERS NATIONWIDE</p>
-                <!-- In a real site, these would be client logos -->
+                <p class="trust-bar-title">A TRUSTED PARTNER TO FURNITURE DEALERS</p>
                 <div class="logos">
-                    <span>DEALER LOGO</span>
-                    <span>FURNITURE CO</span>
-                    <span>EDUCATION SUPPLY</span>
+                    <span>DEALER ONE</span>
+                    <span>SUPPLY CO.</span>
                     <span>OFFICE PARTNERS</span>
+                    <span>DESIGN GROUP</span>
                 </div>
             </div>
         </div>
         
-        <!-- Section 3: Features / Why Us -->
+        <!-- Section 3: The Elite Difference -->
         <section class="section" id="why-us">
             <div class="container">
                 <div class="section-header">
-                    <h2>Engineered for Your Peace of Mind</h2>
-                    <p>We built our service to eliminate the common failures of project installation. We are the seamless, professional extension of your team.</p>
+                    <h2>The Elite Difference</h2>
+                    <p>We founded our company to fix the frustrations we faced as project managers. This is what a true partnership looks like.</p>
                 </div>
                 <div class="features-grid">
                     <div class="feature-card">
-                        <div class="feature-icon" aria-hidden="true"><!-- Icon SVG here --></div>
-                        <h3>Ironclad Reliability</h3>
-                        <p>We do what we say we'll do. Your projects stay on schedule, your clients stay happy, and your reputation for excellence is secure.</p>
+                        <h3>Zero-Drama Reliability</h3>
+                        <p>Your projects stay on schedule, your clients remain happy, and you avoid costly delays. We deliver on our promises, every time.</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon" aria-hidden="true"><!-- Icon SVG here --></div>
-                        <h3>Unmatched Professionalism</h3>
-                        <p>Our uniformed, background-checked crews are experts in school environments. We represent your dealership with the respect it deserves.</p>
+                        <h3>An Extension of Your Team</h3>
+                        <p>Our uniformed, background-checked crews are courteous, clean, and experts in navigating active school environments. They represent your brand with the same care you do.</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon" aria-hidden="true"><!-- Icon SVG here --></div>
-                        <h3>Proactive Communication</h3>
-                        <p>You get a single point of contact and clear, consistent updates. No more chasing down answers or wondering about project status.</p>
+                        <h3>Crystal-Clear Communication</h3>
+                        <p>No more chasing down answers. You get a single point of contact and consistent, clear updates, so you are always in control of the project narrative.</p>
                     </div>
                     <div class="feature-card">
-                        <div class="feature-icon" aria-hidden="true"><!-- Icon SVG here --></div>
-                        <h3>Zero-Damage Guarantee</h3>
-                        <p>With deep product knowledge and the right tools, we ensure a flawless installation. Our comprehensive insurance is your peace of mind.</p>
+                        <h3>Meticulous Attention to Detail</h3>
+                        <p>From protecting floors to a final wipe-down of every surface, we handle the details. Our goal is a zero-item punch list and a site left cleaner than we found it.</p>
                     </div>
                 </div>
             </div>
@@ -100,28 +90,28 @@
                 <div class="stats-grid">
                     <div class="stat-item"><h3>500+</h3><p>Schools Served</p></div>
                     <div class="stat-item"><h3>99.8%</h3><p>On-Time Completion</p></div>
-                    <div class="stat-item"><h3>15+</h3><p>Years of Experience</p></div>
-                    <div class="stat-item"><h3>100%</h3><p>Background-Checked</p></div>
+                    <div class="stat-item"><h3>ZERO</h3><p>Compromises on Quality</p></div>
+                    <div class="stat-item"><h3>100%</h3><p>Partner Satisfaction Goal</p></div>
                 </div>
             </div>
         </section>
 
-        <!-- Section 5: Testimonial (NEW) -->
+        <!-- Section 5: Testimonial -->
         <section class="section testimonial">
             <div class="container">
                 <blockquote>
-                    <p>"Elite Install is the first and only call we make for our major projects. Their professionalism on-site is second to none, and they finish ahead of schedule, every time. They don't just install furniture; they install confidence."</p>
-                    <cite>— Sarah L., Project Manager at Education Supply</cite>
+                    <p>"Elite Install is the first and only call we make. Their professionalism on-site is second to none, and they consistently finish ahead of schedule. They don't just install furniture; they install peace of mind."</p>
+                    <cite>— Sarah L., Senior Project Manager, Dealer One</cite>
                 </blockquote>
             </div>
         </section>
 
-        <!-- Section 6: Final Call to Action (NEW) -->
+        <!-- Section 6: Final Call to Action -->
         <section class="cta-section">
             <div class="container">
-                <h2>Ready to build with a reliable partner?</h2>
-                <p>Let's discuss how we can support your next project with the reliability your dealership deserves.</p>
-                <a href="contact.html" class="btn btn-primary">Get Your Free Quote</a>
+                <h2>Ready for a better installation experience?</h2>
+                <p>Let's discuss how our commitment to quality and detail can ensure the success of your next project.</p>
+                <a href="contact.html" class="btn btn-primary">Partner With Us</a>
             </div>
         </section>
 
@@ -138,13 +128,12 @@
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
-                <p class="footer-copyright">&copy; 2025 Elite Install & Haul. All rights reserved.</p>
+                <p class="footer-copyright">&copy; 2025 Elite Install & Haul. Your Reputation, Installed.</p>
             </div>
         </div>
     </footer>
 
-    <!-- This links to your external JavaScript file. All interactivity is controlled from here. -->
+    <!-- Links to your master JavaScript file -->
     <script src="script.js" defer></script>
 </body>
 </html>
-
