--- a/about.html
+++ b/about.html
@@ -3,20 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Elite Install & Haul</title>
-    <meta name="description" content="Learn about our experience, values, and commitment to being the best installation partner.">
+    <title>About Us | Elite Install</title>
+    <meta name="description" content="Learn how our experience in project management led us to build a better, more reliable installation partner for furniture dealers.">
     
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-
-    <!-- THIS IS THE CRITICAL LINE THAT WAS MISSING -->
+    <!-- This links to your Helvetica font stack in the CSS -->
     <link rel="stylesheet" href="style.css">
-
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
+
     <header class="main-header">
         <nav class="nav-container container">
             <a href="index.html" class="logo">Elite Install</a>
@@ -35,42 +30,85 @@
     </header>
 
     <main id="main-content">
+
+        <!-- Page Header -->
         <div class="page-header">
             <div class="container">
-                <h1>An Extension of Your Team</h1>
-                <p>We're not just installers. We're an extension of your team, founded on industry experience and dedicated to upholding your standards.</p>
+                <h1>Built From Experience. Designed For You.</h1>
+                <p>Elite Install was born from a simple but powerful idea: furniture dealers and project managers deserve an installation partner who is as committed to their success as they are. We are not simply a crew for hire; we are a strategic partner founded to solve the exact problems we faced during our own careers in the industry.</p>
             </div>
         </div>
 
+        <!-- Main Story Section -->
         <section class="section">
+            <div class="container" style="max-width: 800px; text-align: left;">
+                <div class="section-header" style="text-align: left; margin-bottom: 2rem;">
+                    <h2>From Project Manager to Your Most Trusted Partner</h2>
+                </div>
+                <p style="color: var(--text-secondary); margin-bottom: 1rem;">Before founding Elite Install, our leader spent over two decades as a senior project manager for educational and commercial furniture dealerships.</p>
+                <p style="color: var(--text-secondary); margin-bottom: 1rem;">He lived the daily struggle you know all too well: the missed deadlines from unreliable subs, the budget overruns from inefficiency, and the constant brand damage caused by unprofessional crews on-site. The stress of managing installations often overshadowed the satisfaction of a completed project.</p>
+                <p style="color: var(--text-primary); font-weight: 600; margin-bottom: 1rem;">He knew there had to be a better way. A partnership built on transparency, accountability, and a deep respect for the dealer's reputation.</p>
+                <p style="color: var(--text-secondary); font-size: 1.1rem;">So, he built it.</p>
+                <p style="color: var(--text-secondary);">Elite Install was meticulously designed to be the installation company he always wished he could hire. Our entire process is filtered through the lens of a project manager. We anticipate challenges, communicate proactively, and treat every single project with the urgency and professionalism it deserves.</p>
+            </div>
+        </section>
+
+        <!-- Core Commitments Section -->
+        <section class="section" style="background-color: rgba(0,0,0,0.15); border-top: 1px solid var(--border-color); border-bottom: 1px solid var(--border-color);">
             <div class="container">
-                <div class="about-content">
-                    <div class="about-text">
-                        <h2>Founded on Experience</h2>
-                        <p>Our founder spent over two decades as a project manager for educational furniture dealerships. He faced the same challenges you deal with every day: unreliable subcontractors, communication breakdowns, and the constant worry about site professionalism.</p>
-                        <p>That experience taught us exactly what project managers need: a partner who understands the stakes, respects the process, and delivers consistent, drama-free results.</p>
+                <div class="section-header">
+                    <h2>Our Core Commitments</h2>
+                    <p>Our values aren't just words on a page; they are the guiding principles for every action we take on every job site. This is our promise to you.</p>
+                </div>
+                <div class="features-grid">
+                    <div class="feature-card">
+                        <h3>Unwavering Reliability</h3>
+                        <p>We see schedules and deadlines as promises. We invest heavily in pre-project planning and logistics to ensure your project unfolds seamlessly, protecting your timeline, your budget, and your peace of mind.</p>
                     </div>
-                    <div class="about-values">
-                        <h3>Our Core Values</h3>
-                        <ul>
-                            <li><strong>Reliability:</strong> Consistent performance you can count on.</li>
-                            <li><strong>Professionalism:</strong> Uniformed, trained, background-checked team.</li>
-                            <li><strong>Efficiency:</strong> The right tools and experience, done right the first time.</li>
-                            <li><strong>Communication:</strong> Proactive updates and responsive service.</li>
-                        </ul>
+                    <div class="feature-card">
+                        <h3>Radical Professionalism</h3>
+                        <p>Our uniformed, background-checked installers understand they are guests in your client's space and, more importantly, ambassadors for your brand. We prioritize courtesy, cleanliness, and respect above all else.</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Expert Efficiency</h3>
+                        <p>We believe in doing it right the first time. We don’t use temporary labor. Our dedicated, full-time teams are equipped with the right tools and training to execute flawlessly, preventing costly punch lists and return trips.</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Proactive Communication</h3>
+                        <p>You will never have to chase us for an update. We provide a single point of contact and a clear communication rhythm, giving you the visibility and control you need to confidently manage your client's expectations.</p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <!-- Final Call to Action -->
+        <section class="cta-section">
+            <div class="container">
+                <h2>Ready for a True Partnership?</h2>
+                <p>Let's discuss how our commitment to quality, communication, and professionalism can ensure the success of your next project.</p>
+                <a href="contact.html" class="btn btn-primary">Partner With Us</a>
+            </div>
+        </section>
+
     </main>
 
     <footer class="main-footer">
         <div class="container">
-             <p class="footer-copyright">&copy; 2025 Elite Install & Haul. All rights reserved.</p>
+            <div class="footer-content">
+                <p class="footer-logo">Elite Install</p>
+                <ul class="footer-nav">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="services.html">Services</a></li>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+                <p class="footer-copyright">&copy; 2025 Elite Install. Your Reputation, Installed.</p>
+            </div>
         </div>
     </footer>
 
-    <!-- THIS IS THE SECOND CRITICAL LINE -->
+    <!-- Links to your master JavaScript file -->
     <script src="script.js" defer></script>
 </body>
 </html>
