--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </div>
                 <blockquote>
                     <p>"Having spent years managing complex furniture projects, we know the cost of a bad install—the delays, the damaged client relationships, and the late-night stress. We built Elite Install to be the solution. We're obsessed with getting the details right so that you can consider the job done the moment you hire us."</p>
-                    <cite>— The Elite Install Founding Team</cite>
+                    <cite>— Tyler Herrick, Founder of Elite Install</cite>
                 </blockquote>
             </div>
         </section>
@@ -167,4 +167,5 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
 
