--- a/contact.html
+++ b/contact.html
@@ -75,19 +75,19 @@
                     <div class="contact-info">
                         <div class="contact-info-item">
                             <h4>Direct Email</h4>
-                            <p>quotes@eliteinstallhaul.com</p>
+                            <p>tylerherrick13@gmail.com</p>
                         </div>
                         <div class="contact-info-item">
                             <h4>Phone</h4>
-                            <p>(555) 123-ELITE</p>
+                            <p>(469) 380-1551</p>
                         </div>
                         <div class="contact-info-item">
                             <h4>Service Areas</h4>
-                            <p>Texas, Oklahoma, Arkansas, Louisiana, and surrounding regions.</p>
+                            <p>Dallas, Houston, Austin, San Antonio, & West Texas.</p>
                         </div>
                         <div class="contact-info-item">
                             <h4>Our Commitment</h4>
-                            <p>All quote requests and inquiries are answered within 4 business hours. We respect your time.</p>
+                            <p>All quote requests and inquiries are answered within 24 business hours. We respect your time.</p>
                         </div>
                     </div>
 
