--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                 <div class="section-header"><h2>A Message From Our Founder</h2></div>
                 <blockquote><p>"I know the cost of a bad install—the delays, the damaged relationships, and the stress. I built Elite Install to be the solution. We are obsessed with getting the details right so that you can consider the job done the moment you hire us. We look forward to earning your trust and becoming the only call you need to make."</p>
                     <cite>
-                        <span class="founder-signature">Founder's Signature</span> <!-- Placeholder for a signature image -->
-                        John Doe, Founder of Elite Install
+                        <span class="founder-signature">Tyler Herrick</span> <!-- Placeholder for a signature image -->
+                        Tyler Herrick, Founder of Elite Install
                     </cite>
                 </blockquote>
             </div>
@@ -143,3 +143,4 @@
     <script src="script.js" defer></script>
 </body>
 </html>
+
