--- a/index.html
+++ b/index.html
@@ -1,27 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Basic Meta Tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Elite Install | Your Reputation, Installed.</title>
-    <meta name="description" content="The premier B2B installation partner for furniture dealers. We provide flawless execution, radical professionalism, and unwavering reliability to protect your reputation and your peace of mind.">
+    <meta name="description" content="The premier B2B installation partner for furniture dealers in Texas. We provide flawless execution, radical professionalism, and unwavering reliability to protect your reputation.">
+
+    <!-- Favicon Links - Create these assets and place them in your root or /images folder -->
+    <link rel="icon" href="/favicon.ico" sizes="any">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+
+    <!-- Canonical URL to prevent duplicate content issues -->
+    <link rel="canonical" href="https://www.eliteinstallandhaul.com/">
+
+    <!-- Social Media Sharing (Open Graph & Twitter Cards) -->
+    <meta property="og:title" content="Elite Install | Your Reputation, Installed.">
+    <meta property="og:description" content="The premier B2B installation partner for furniture dealers. Flawless execution and unwavering reliability.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.eliteinstallandhaul.com/">
+    <meta property="og:image" content="https://www.eliteinstallandhaul.com/images/social-share-card.jpg"> <!-- Create a 1200x630px image for this -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Elite Install | Your Reputation, Installed.">
+    <meta name="twitter:description" content="The premier B2B installation partner for furniture dealers.">
+    <meta name="twitter:image" content="https://www.eliteinstallandhaul.com/images/social-share-card.jpg">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- JSON-LD Structured Data for Rich Snippets -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "Elite Install & Haul",
+      "url": "https://www.eliteinstallandhaul.com/",
+      "logo": "https://www.eliteinstallandhaul.com/images/logo.png",
+      "telephone": "+1-555-123-4567",
+      "email": "quotes@eliteinstallandhaul.com",
+      "description": "The premier B2B installation partner for furniture dealers, providing flawless execution, radical professionalism, and unwavering reliability.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Carrollton",
+        "addressRegion": "TX",
+        "postalCode": "75006",
+        "addressCountry": "US"
+      },
+      "areaServed": {
+        "@type": "State",
+        "name": "Texas"
+      },
+      "openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
+      "potentialAction": {
+        "@type": "ReserveAction",
+        "target": {
+          "@type": "EntryPoint",
+          "urlTemplate": "https://www.eliteinstallandhaul.com/contact.html",
+          "inLanguage": "en-US",
+          "actionPlatform": [
+            "http://schema.org/DesktopWebPlatform",
+            "http://schema.org/IOSPlatform",
+            "http://schema.org/AndroidPlatform"
+          ]
+        },
+        "result": {
+          "@type": "Reservation",
+          "name": "Request a Project Quote"
+        }
+      }
+    }
+    </script>
 </head>
 <body>
     <a href="#main-content" class="skip-link">Skip to main content</a>
     
-    <!-- This utility header is a new addition, common on high-end sites for immediate access to key actions. -->
-    <!-- You would add styling for this in style.css, e.g., .utility-header { ... } -->
+    <!-- Utility Header for quick actions -->
     <div class="utility-header">
-        <div class="container">
-            <span>(555) 123-ELITE</span>
-            <a href="contact.html">Request a Project Quote →</a>
+        <div class="container utility-header-content">
+            <a href="tel:+15551234567" class="phone-link">(555) 123-ELITE</a>
+            <a href="contact.html" class="btn btn-utility">Request a Project Quote →</a>
         </div>
     </div>
 
     <header class="main-header">
-        <nav class="nav-container container">
-            <a href="index.html" class="logo">Elite Install</a>
+        <nav class="nav-container container" aria-label="Main Navigation">
+            <a href="index.html" class="logo" aria-label="Elite Install - Home">Elite Install</a>
+            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
+                <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+                <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
+            </button>
             <ul class="nav-links" id="nav-links">
                 <li><a href="index.html" aria-current="page">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -29,10 +97,6 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <button class="mobile-menu-toggle" aria-label="Toggle navigation" aria-expanded="false" aria-controls="nav-links">
-                <svg class="icon-open" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M3 12H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 6H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M3 18H21" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                <svg class="icon-close" width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 6L6 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-            </button>
         </nav>
     </header>
 
@@ -63,10 +127,10 @@
                     <p>We built our company on a foundation of four commitments. These are not goals; they are the non-negotiable standards we bring to every project, every day.</p>
                 </div>
                 <div class="features-grid">
-                    <div class="feature-card fade-in-up"><div class="feature-icon">...</div><h3>Unwavering Reliability</h3><p>Schedules are promises. We invest heavily in logistics and pre-planning to ensure your project unfolds seamlessly, protecting your timeline, budget, and peace of mind.</p></div>
-                    <div class="feature-card fade-in-up" data-delay="100"><div class="feature-icon">...</div><h3>Radical Professionalism</h3><p>Our uniformed, background-checked installers are ambassadors for your brand. We prioritize courtesy, cleanliness, and respect as core pillars of our service.</p></div>
-                    <div class="feature-card fade-in-up" data-delay="200"><div class="feature-icon">...</div><h3>Expert Efficiency</h3><p>We believe in doing it right the first time. We don’t use temporary labor. Our dedicated teams use the right tools and training to prevent costly punch lists and return trips.</p></div>
-                    <div class="feature-card fade-in-up" data-delay="300"><div class="feature-icon">...</div><h3>Proactive Communication</h3><p>You will never have to chase us for an update. We provide a single point of contact and a clear communication rhythm, giving you the control to manage client expectations.</p></div>
+                    <div class="feature-card fade-in-up"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></div><h3>Unwavering Reliability</h3><p>Schedules are promises. We invest heavily in logistics and pre-planning to ensure your project unfolds seamlessly, protecting your timeline, budget, and peace of mind.</p></div>
+                    <div class="feature-card fade-in-up" data-delay="100"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="8.5" cy="7" r="4"></circle><polyline points="17 11 19 13 23 9"></polyline></svg></div><h3>Radical Professionalism</h3><p>Our uniformed, background-checked installers are ambassadors for your brand. We prioritize courtesy, cleanliness, and respect as core pillars of our service.</p></div>
+                    <div class="feature-card fade-in-up" data-delay="200"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M12.22 2h-4.44A2.78 2.78 0 0 0 5 4.78v14.44A2.78 2.78 0 0 0 7.78 22h8.44A2.78 2.78 0 0 0 19 19.22V10z"></path><polyline points="14 2 14 8 20 8"></polyline><line x1="12" y1="18" x2="12" y2="12"></line><line x1="9" y1="15" x2="15" y2="15"></line></svg></div><h3>Expert Efficiency</h3><p>We believe in doing it right the first time. We don’t use temporary labor. Our dedicated teams use the right tools and training to prevent costly punch lists and return trips.</p></div>
+                    <div class="feature-card fade-in-up" data-delay="300"><div class="feature-icon"><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"></path></svg></div><h3>Proactive Communication</h3><p>You will never have to chase us for an update. We provide a single point of contact and a clear communication rhythm, giving you the control to manage client expectations.</p></div>
                 </div>
             </div>
         </section>
@@ -78,7 +142,7 @@
                     <h2>Certainty, by Design. Our Process.</h2>
                     <p>Success isn't an accident. It's the result of a disciplined, transparent process that ensures alignment and excellence from start to finish.</p>
                 </div>
-                <div class="process-steps"> <!-- This is a new structure that you would style in style.css -->
+                <div class="process-steps">
                     <div class="process-step fade-in-up"><span>1</span><h3>Discovery & Planning</h3><p>We begin with a detailed project review, site-readiness confirmation, and logistical alignment to anticipate challenges before they arise.</p></div>
                     <div class="process-step fade-in-up" data-delay="150"><span>2</span><h3>Flawless Execution</h3><p>Our professional crew arrives on-time with the right tools, executing the plan with meticulous attention to detail and safety protocols.</p></div>
                     <div class="process-step fade-in-up" data-delay="300"><span>3</span><h3>Quality Control & Hand-off</h3><p>We conduct a rigorous post-installation walkthrough to ensure a zero-item punch list, leaving the site pristine and ready for your client.</p></div>
@@ -90,10 +154,11 @@
         <section class="section testimonial">
             <div class="container fade-in-up">
                 <div class="section-header"><h2>A Message From Our Founder</h2></div>
-                <blockquote><p>"I know the cost of a bad install—the delays, the damaged relationships, and the stress. I built Elite Install to be the solution. We are obsessed with getting the details right so that you can consider the job done the moment you hire us. We look forward to earning your trust and becoming the only call you need to make."</p>
+                <blockquote>
+                    <p>"I know the cost of a bad install—the delays, the damaged relationships, and the stress. I built Elite Install to be the solution. We are obsessed with getting the details right so that you can consider the job done the moment you hire us. We look forward to earning your trust and becoming the only call you need to make."</p>
                     <cite>
-                        <span class="founder-signature">Tyler Herrick</span> <!-- Placeholder for a signature image -->
-                        Tyler Herrick, Founder of Elite Install
+                        <img src="images/tyler-herrick-signature.png" alt="Tyler Herrick's Signature" class="founder-signature-image">
+                        <span>Tyler Herrick, Founder of Elite Install</span>
                     </cite>
                 </blockquote>
             </div>
@@ -111,7 +176,7 @@
 
     <footer class="main-footer">
         <div class="container">
-            <div class="footer-grid"> <!-- A more advanced footer structure -->
+            <div class="footer-grid">
                 <div class="footer-column about">
                     <p class="footer-logo">Elite Install</p>
                     <p>The premier B2B installation partner delivering flawless execution, proactive communication, and unwavering reliability.</p>
@@ -127,15 +192,15 @@
                 </div>
                 <div class="footer-column contact">
                     <h4>Get In Touch</h4>
-                    <p>
-                        (555) 123-ELITE<br>
-                        quotes@eliteinstall.com<br>
+                    <address>
+                        <a href="tel:+15551234567">(555) 123-ELITE</a><br>
+                        <a href="mailto:quotes@eliteinstallandhaul.com">quotes@eliteinstallandhaul.com</a><br>
                         Serving the greater Texas region and beyond.
-                    </p>
+                    </address>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Elite Install. Your Reputation, Installed.</p>
+                <p>&copy; 2025 Elite Install & Haul. Your Reputation, Installed.</p>
             </div>
         </div>
     </footer>
@@ -143,4 +208,3 @@
     <script src="script.js" defer></script>
 </body>
 </html>
-
