--- a/index.html
+++ b/index.html
@@ -41,10 +41,28 @@
         "postalCode": "75006",
         "addressCountry": "US"
       },
-      "areaServed": {
-        "@type": "State",
-        "name": "Texas"
-      },
+      "areaServed": [
+        {
+          "@type": "AdministrativeArea",
+          "name": "Dallas"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "Houston"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "Austin"
+        },
+        {
+          "@type": "AdministrativeArea",
+          "name": "San Antonio"
+        },
+        {
+            "@type": "AdministrativeArea",
+            "name": "West Texas"
+        }
+      ],
       "openingHours": "Mo,Tu,We,Th,Fr 08:00-18:00",
       "potentialAction": {
         "@type": "ReserveAction",
